--- a/Frontend/src/pages/Products/Edit/ProductEditPage.module.css
+++ b/Frontend/src/pages/Products/Edit/ProductEditPage.module.css
@@ -25,6 +25,8 @@
   border-radius: var(--border-radius);
   padding: 2rem;
   box-shadow: var(--card-shadow);
+  margin-bottom: 3rem;
+  min-height: 600px;
 }
 
 .success-message {
